<resources>
    <string name="app_name">ماژول کارتابل</string>
    <string name="response_error">"به یکی از دلایل زیر امکان برقراری ارتباط مقدور نمی باشد\n 1. دستگاه فاقد ارتباط اینترنتی میباشد. \n 2. سرور در دسترس نمی باشد. \n 3. خطایی در سرور یا برنامه رخ داده است."</string>
    <string name="internal_server_error">خطایی در سرور رخ داده است.. با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="save">ذخیره</string>
    <string name="delete">حذف</string>
    <string name="enter_reminder_title">عنوان یادآور را اینجا بنویسید</string>
    <string name="add_reminder_date">افزودن تاریخ و ساعت رویداد</string>
    <string name="starting_date">تاریخ شروع :</string>
    <string name="time">ساعت :</string>
    <string name="end_date">تاریخ خاتمه :</string>
    <string name="reminder_date">تاریخ هشدار</string>
    <string name="date">تاریخ :</string>`
    <string name="event_type">نوع رویداد</string>
    <string name="meeting_location">مکان جلسه</string>
    <string name="related_persons">افراد مربوطه</string>
    <string name="add">افزودن</string>
    <string name="are_you_sure_delete">آیا از حذف این آیتم مطمئن هستید؟</string>
    <string name="fill_all_blanks">اطلاعات معتبر وارد کنید</string>
    <string name="date_from">از تاریخ</string>
    <string name="date_to">تا تاریخ</string>
    <string name="show_all_events">نمایش همه رویدادها</string>
    <string name="all_events">همه رویدادها</string>
    <string name="fill_event_title">عنوان یادآور را وارد نمایید</string>
    <string name="choose_event_type">نوع رویداد را انتخاب کنید</string>
    <string name="choose_location">مکان رویداد را انتخاب کنید</string>
    <string name="choose_related_people">افراد مربوطه را انتخاب نمایید</string>
    <string name="no_item_exist">آیتمی وجود ندارد</string>
    <string name="wait">لطفا منتظر بمانید</string>
    <string name="failure_operation">عملیات ناموفق بود</string>
    <string name="success_operation">عملیات با موفقیت انجام شد</string>
    <string name="not_complete">تکمیل نشده</string>
    <string name="steps_add_edit_letter">مراحل ایجاد / ویرایش نامه</string>
    <string name="letter_draft">پیش نویس نامه</string>
    <string name="letter_information">اطلاعات نامه</string>
    <string name="attachment">ضمیمه</string>
    <string name="receivers">گیرندگان</string>
    <string name="letter_linked">نامه های مرتبط</string>
    <string name="extra_information">اطلاعات تکمیلی</string>
    <string name="final_register_refer">ثبت نهایی و ارجاع</string>
    <string name="delete_draft">حذف پیشنویس</string>
    <string name="contract_number">شماره قرارداد</string>
    <string name="focus_number">شماره تمرکز</string>
    <string name="commercial_id">شماره بازرگانی</string>
    <string name="project">پروژه</string>
    <string name="key_word">کلید واژه</string>
    <string name="letter_type">نوع نامه</string>
    <string name="imported">وارده</string>
    <string name="exported">صادره</string>
    <string name="internal">داخلی</string>
    <string name="secretariat">دبیرخانه</string>
    <string name="letter_subject">موضوع نامه</string>
    <string name="letter_body">متن نامه</string>
    <string name="confidentiality">محرمانگی</string>
    <string name="sendType">نحوه ارسال</string>
    <string name="sent">ارسال شده</string>
    <string name="letter_receiver">گیرنده نامه</string>
    <string name="priority">فوریت</string>
    <string name="letter_other_receiver">گیرنده متفرقه</string>
    <string name="received_type0">نحوه دریافت</string>
    <string name="date_imported_letter">تاریخ نامه وارده</string>
    <string name="entered_letter_number">شماره نامه وارده</string>
    <string name="letter_other_sender">فرستنده متفرقه</string>
    <string name="letter_sender">فرستنده نامه</string>
    <string name="related_letters">نامه های مرتبط</string>
    <string name="letters">نامه ها</string>
    <string name="relation_type">نوع ارتباط</string>
    <string name="refer_type0">نوع ارجاع</string>
    <string name="action_type">نوع اقدام</string>
    <string name="send_receive_method">نحوه ارسال / دریافت</string>
    <string name="receiver0">گیرنده</string>
    <string name="refer_description0">شرح ارجاع</string>
    <string name="edit_receiver">ویرایش گیرنده</string>
    <string name="add_receiver">افزودن گیرنده</string>
    <string name="letter_creator">ایجاد کننده</string>
    <string name="sender">فرستنده :</string>
    <string name="receiver">گیرنده :</string>
    <string name="are_you_sure_approve_end">آیا از تایید و خاتمه نهایی مطمئن هستید؟</string>
    <string name="are_you_sure_disapprove_end">آیا از عدم موافقت و خاتمه کار مطمئن هستید؟</string>
    <string name="transfer_to_archive">انتقال به بایگانی</string>
    <string name="fast_sign">امضاء سریع</string>
    <string name="verification_sign">تایید و امضاء</string>
    <string name="fast_refer">ارجاع سریع</string>
    <string name="save_send">ذخیره و ارسال</string>
    <string name="are_you_sure_transfer_archive">آیا از انتقال این مورد به بایگانی مطمئن هستید؟</string>
    <string name="in_next_version">در نسخه های بعدی..</string>
    <string name="time_line">تاریخچه نموداری</string>
    <string name="not_fount_sub_system">زیرسیستم یافت نشد</string>
    <string name="document_kartable">کارتابل اسناد</string>
    <string name="select_item">آیتمی را انتخاب کنید</string>
    <string name="selected_items_not_teamate">آیتم های انتخاب شده در یک گروه نیستند</string>
    <string name="subject_classification">طبقه بندی موضوع</string>
    <string name="apply_filter">اعمال فیلتر</string>
    <string name="write_reason">دلیل خود را بیان کنید</string>
    <string name="description">توضیحات</string>
    <string name="fill_note">متن خود را وارد نمایید.</string>
    <string name="search_receivers">جستجوی گیرندگان</string>
    <string name="refer_type">نوع ارجاع :</string>
    <string name="received_type">نوع دریافت :</string>
    <string name="refer_nature">ماهیت ارجاع :</string>
    <string name="refer_description">شرح ارجاع :</string>
    <string name="refer_nature0">ماهیت ارجاع</string>
    <string name="enter_title">یک عنوان بنویسید</string>
    <string name="referral_text">شرح ارجاع</string>
    <string name="add_fast_refer">افزودن ارجاع سریع</string>
    <string name="relate_step">مرحله مرتبط</string>
    <string name="secret">محرمانه</string>
    <string name="follow_up">پیگیری</string>
    <string name="sms">پیامک</string>
    <string name="answer_time">مهلت پاسخ</string>
    <string name="done">انجام</string>
    <string name="fill_next_step">ابتدا مرحله مرتبط را انتخاب کنید</string>
    <string name="speech_prompt">برای شروع چیزی بگویید..</string>
    <string name="not_support">سرویس مذکور روی دستگاه شما نصب نمی باشد.</string>
    <string name="refer">ارجاع</string>
    <string name="add_refer">افزودن ارجاع</string>
    <string name="do_search">جستجو کنید...</string>
    <string name="fill_search_key">کلمه جستجو را وارد کنید</string>
    <string name="item">مورد</string>
    <string name="cardboard">کارتابل</string>
    <string name="file_name">نام فایل :</string>
    <string name="file_type">نوع فایل :</string>
    <string name="register_date">تاریخ ثبت</string>
    <string name="description1">توضیحات :</string>
    <string name="download">دانلود</string>
    <string name="file_size">حجم فایل :</string>
    <string name="kilo_byte">کیلوبایت</string>
    <string name="add_attachment">افزودن ضمائم</string>
    <string name="no_file_exist_to_upload">فایلی برای ارسال وجود ندارد</string>
    <string name="attachments">ضمائم</string>
    <string name="error_download_file_call_support">خطا در بارگیری فایل، مجددا تلاش کنید یا با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="path_saved_file">مسیر ذخیره فایل در حافظه دستگاه پوشه $ میباشد.</string>
    <string name="error_save_file_call_support">خطا در ذخیره سازی فایل، مجددا تلاش کنید یا با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="error_save_file">خطا در ذخیره فایل</string>
    <string name="incomplete_file_call_support">اطلاعات فایل ضمیمه ناقص است، با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="refer_date">تاریخ ارجاع :</string>
    <string name="detail">جزئیات</string>
    <string name="error_loading_pdf">خطا در بارگذاری پی دی اف</string>
    <string name="failed_load_report">خطا در خواندن گزارش</string>
    <string name="report">گزارش</string>


</resources>