<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/action_transfer_archive"
            android:enabled="true"
            android:title="@string/transfer_to_archive"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_fast_referral"
            android:enabled="true"
            android:title="@string/fast_refer"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_fast_sign"
            android:enabled="true"
            android:title="@string/fast_sign"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_verification_sign"
            android:enabled="true"
            android:title="@string/verification_sign"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_save_send"
            android:enabled="true"
            android:title="@string/save_send"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_delete"
            android:enabled="true"
            android:title="@string/delete"
            app:showAsAction="never" />
</menu>