<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="@dimen/guid_line">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guid_line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guid_line" />

        <TextView
            android:id="@+id/lblLetterType"
            style="@style/LabelCaptionStyle"
            android:textColor="@color/colorPrimary"
            android:text="@string/letter_type"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rdbGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/lblLetterType"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdbImported"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/imported"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdbExported"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/exported"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdbInternal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:checked="true"
                android:text="@string/internal"/>
        </RadioGroup>


        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spSecretariat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rdbGroup"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/secretariat"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSubject"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="?android:textColorSecondary"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spSecretariat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/letter_subject"
                android:textSize="@dimen/textAppearanceSubtitle2"
                android:textColor="@color/black"
                android:textColorHint="?android:textColorSecondary"
                android:textAlignment="center"/>
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBody"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="?android:textColorSecondary"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tilSubject">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:gravity="top"
                android:hint="@string/letter_body"
                android:textSize="@dimen/textAppearanceSubtitle2"
                android:textColor="@color/black"
                android:textColorHint="?android:textColorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spAccessType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilBody"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/confidentiality"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spAccessType"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/priority"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutUserProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spPriority"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:visibility="gone">

            <ir.awlrhm.modules.view.Spinner
                android:id="@+id/spDocumentMethodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sp_title="@string/sendType"
                app:sp_titleColor="@color/colorPrimary"
                app:sp_hint="@string/choose"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="12dp" />

            <ir.awlrhm.modules.view.Spinner
                android:id="@+id/spLetterReceiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spDocumentMethodType"
                android:layout_marginTop="12dp"
                app:sp_title="@string/letter_receiver"
                app:sp_titleColor="@color/colorPrimary"
                app:sp_hint="@string/choose"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLetterOtherReceiver"
                style="@style/MaterialTextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="?android:textColorSecondary"
                app:layout_constraintTop_toBottomOf="@id/spLetterReceiver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLetterOtherReceiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/letter_other_receiver"
                    android:textSize="@dimen/textAppearanceSubtitle2"
                    android:textColor="@color/black"
                    android:textColorHint="?android:textColorSecondary"
                    android:textAlignment="center"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutReceiver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spPriority"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:visibility="gone">

            <ir.awlrhm.modules.view.Spinner
                android:id="@+id/spReceivedType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sp_title="@string/received_type0"
                app:sp_titleColor="@color/colorPrimary"
                app:sp_hint="@string/choose"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <ir.awlrhm.modules.view.DatePicker
                android:id="@+id/dvImportedLetter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spReceivedType"
                android:layout_marginTop="12dp"
                app:dp_title="@string/date_imported_letter"
                app:dp_titleColor="@color/colorPrimary"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilImportedLetterNo"
                style="@style/MaterialTextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="?android:textColorSecondary"
                app:layout_constraintTop_toBottomOf="@id/dvImportedLetter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtImportedLetterNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entered_letter_number"
                    android:textSize="@dimen/textAppearanceSubtitle2"
                    android:textColor="@color/black"
                    android:textColorHint="?android:textColorSecondary"
                    android:textAlignment="center"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ir.awlrhm.modules.view.Spinner
                android:id="@+id/spLetterSender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tilImportedLetterNo"
                android:layout_marginTop="12dp"
                app:sp_title="@string/letter_sender"
                app:sp_titleColor="@color/colorPrimary"
                app:sp_hint="@string/choose"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLetterOtherSender"
                style="@style/MaterialTextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="?android:textColorSecondary"
                app:layout_constraintTop_toBottomOf="@id/spLetterSender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLetterOtherSender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/letter_other_sender"
                    android:textSize="@dimen/textAppearanceSubtitle2"
                    android:textColor="@color/black"
                    android:textColorHint="?android:textColorSecondary"
                    android:textAlignment="center"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
