<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="@dimen/guid_line">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guid_line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guid_line" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spReferType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:sp_title="@string/refer_type0"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spReferenceAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spReferType"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/action_type"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spSendReceiveMethod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spReferenceAction"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/send_receive_method"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spSendReceiveMethod"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/priority"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spReceiver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spPriority"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/receiver0"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilReferDescription"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="?android:textColorSecondary"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spReceiver">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtReferDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:gravity="top"
                android:hint="@string/refer_description0"
                android:textSize="@dimen/textAppearanceSubtitle2"
                android:textColor="@color/black"
                android:textColorHint="?android:textColorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>