<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="@dimen/guid_line">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guid_line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guid_line" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spContractNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:sp_title="@string/contract_number"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spCustomerAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spContractNo"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/focus_number"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spCommercialId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spCustomerAccount"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/commercial_id"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spProject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spCommercialId"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="12dp"
            app:sp_title="@string/project"
            app:sp_titleColor="@color/colorPrimary"
            app:sp_hint="@string/choose" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilKeyWord"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/btnAddKeyWord"
            app:layout_constraintTop_toBottomOf="@id/spProject">

            <EditText
                android:id="@+id/edtKeyWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/key_word"
                android:textSize="@dimen/textAppearanceSubtitle2"
                android:textColor="@color/black" />
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnAddKeyWord"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tilKeyWord"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/tilKeyWord"
            app:srcCompat="@drawable/ic_add_circle" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/layoutKeyWords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tilKeyWord"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>